# wayfire

metadata/: animate.xml
plugins/: meson.build
plugins/animate/: meson.build
plugins/blur/: meson.build
plugins/common/: move-drag-interface.cpp  workspace-wall.cpp
plugins/common/wayfire/plugins/common/: move-drag-interface.hpp  workspace-wall.hpp
plugins/ipc/: demo-ipc.cpp  ipc-helpers.hpp  ipc-method-repository.hpp  ipc.cpp  ipc.hpp  nlohmann.hpp  stipc.cpp
plugins/ipc-rules/: ipc-rules.cpp  ipc-utility-methods.hpp  meson.build
plugins/pch/: pch.hpp
plugins/scale/: scale.cpp
plugins/single_plugins/: alpha.cpp  command.cpp  oswitch.cpp  wsets.cpp
plugins/tile/: tile-ipc.hpp
src/core/: core.cpp
src/core/seat/: drag-icon.hpp
